# italian-law-normattiva-kb-akomantoso

./: .gitignore  Dockerfile  README.md  docker-compose.yml  normativa_processor.py  requirements.txt
app/: cli.py
app/analysis/: conflict_detector.py
app/core/: config.py  exceptions.py  tag_config.py  utils_text.py
normativa_processor/: __init__.py  cli.py
normattiva_kb/: .env.example  Dockerfile  README.md  SETUP.md  STRUCTURE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
normattiva_kb/app/: cli.py
normattiva_kb/app/api/: deps.py  main.py  routes.py  schemas.py
normattiva_kb/app/core/: logging.py  tag_config.py  utils_dates.py  utils_ids.py
normattiva_kb/app/db/: __init__.py  async_models.py  async_session.py  models.py  repo.py  session.py
normattiva_kb/app/db/migrations/versions/: 0001_init.py  0002_conflict_events.py  0003_document_version_deltas.py
normattiva_kb/app/ingestion/: normattiva_reader.py  raw_store.py  scanner.py  zip_cache.py
normattiva_kb/app/parsing/: akoma_parser.py  canonicalize.py  hierarchy_builder.py  node_text.py  normattiva_parser.py  quality.py  references.py  urn_resolver.py
normattiva_kb/app/versioning/: diff_store.py
normattiva_kb/tests/: test_allegati_tabelle.py  test_api_smoke.py  test_articoli_bis_commi_bis.py  test_hierarchy_paths.py  test_reference_extraction.py
normattiva_kb/tests/fixtures/: normattiva_sample_1.xml  normattiva_sample_2.xml
scripts/: build_vector_db_ultimate.py
tests/: test_config.py  test_extraction_errors.py  test_ingest_idempotent.py  test_token_estimation.py
(+27 files in other folders)
