[project]
name = "normattiva_kb"
version = "0.1.0"
description = "Normattiva XML ingestion and parsing pipeline"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "lxml>=5.1",
  "pydantic>=2.6",
  "structlog>=24.1",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "diff-match-patch>=20230430",
]

[project.optional-dependencies]
checks = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
